--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import os\n",
-    "from lshutils import *\n",
+    "from flylsh.lshutils import *\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from bokeh.plotting import figure,output_file,show"
